# network-validation-platform

./: .gitignore  Makefile  README.md  pyproject.toml
containerlab/: evpn.yml
sot/: fabric.yml  overlay.yml  services.yml  underlay.yml  validation.yml
src/nvp/: __init__.py  cli.py  collectors.py  eos_client.py  generate_configs.py  load_sot.py  models.py  netbox_client.py  report.py  validators.py
templates/: eos_evpn.j2
tests/: test_collectors.py  test_generate_configs.py  test_integration_lab.py  test_load_sot.py  test_models.py  test_validators.py
