[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-validation-platform"
version = "0.1.0"
description = "EVPN/VXLAN fabric validation platform for Containerlab and cEOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
nvp = "nvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live Containerlab tests that require Docker and a deployed lab",
]

[tool.ruff]
line-length = 88
target-version = "py310"
